메인페이지 완성

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,30 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord | 대화하고, 어울리는 공간</title>
     <link rel="stylesheet" href="main.css">
-    <link href="https://www.freeiconspng.com/thumbs/discord-icon/discord-icon-7.png" rel="shortcut icon"
-        type="image/x-icon">
+    <link href="img/discord-round-color-icon.png" rel="shortcut icon" type="image/x-icon">
     <script src="https://kit.fontawesome.com/13b874a53a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="inner-header">
-            <h1 class="logo">
-                <a href="#">
-                    <img src="img/logo.png" alt="로고이미지">
-                </a>
-            </h1>
-            <h2 class="intro-text">Download</h2>
-            <h2 class="intro-text">Nitro</h2>
-            <h2 class="intro-text">Discover</h2>
-            <h2 class="intro-text">Safety</h2>
-            <h2 class="intro-text">Support</h2>
-            <h2 class="intro-text">Blog</h2>
-            <h2 class="intro-text">Careers</h2>
-            <div class="btnLogin"><button class="login">Login</button></div>
 
-    </header>
     <div class="first-floor">
+        <header class="main-header">
+            <div class="inner-header">
+                <h1 class="logo">
+                    <a href="#">
+                        <img src="img/logo.png" alt="로고이미지">
+                    </a>
+                </h1>
+                <h2 class="intro-text"><a href="#">Download</a></h2>
+                <h2 class="intro-text"><a href="#">Nitro</a></h2>
+                <h2 class="intro-text"><a href="#">Discover</a></h2>
+                <h2 class="intro-text"><a href="#">Safety</a></h2>
+                <h2 class="intro-text"><a href="#">Support</a></h2>
+                <h2 class="intro-text"><a href="#">Blog</a></h2>
+                <h2 class="intro-text"><a href="#">Careers</a></h2>
+                <div class="btnLogin"><button class="login">Login</button></div>
+        </header>
         <div class="leftImg"></div>
         <div class="txt">
             <p>이런 공간이 있다면 어떨까요...</p>
@@ -41,12 +40,130 @@
             <button class="download"><i class="fa-solid fa-download"></i>&nbsp;&nbsp;Mac용 다운로드</button>
             <button class="browser">웹브라우저에서 Discord 열기</button>
         </div>
-        <div class="rightImg"></div>
+        <div class="rightImg">
+            <img src="img/rightImg.png" alt="">
+        </div>
     </div>
-    <div class="second-floor"></div>
-    <div class="third-floor"></div>
-    <div class="fourth-floor"></div>
-    <div class="fifth-floor"></div>
+    <div class="second-floor">
+        <div class="imgBox"></div>
+        <div class="description">
+            <h2>나만을 위한 초대 전용 공간을 만들어보세요</h2>
+            <p>Discord 서버는 주제 기반 채널로 나뉩니다. 단체
+                방에서도 혼잡함 없이 협동하고, 공유하고, 편하게 이야기를
+                나눌 수 있어요.
+            </p>
+        </div>
+    </div>
+    <div class="third-floor">
+        <div class="description">
+            <h2>누구나 쉽게 어울릴 수 있는 곳</h2>
+            <p>모처럼 한가하다면 음성 채널에 들어가 보세요.
+                전화를 걸 필요 없이 입장과 동시에 서버에 있는 친구들과 대화를 나눌 수 있답니다.
+            </p>
+        </div>
+        <div class="imgBox"></div>
+    </div>
+    <div class="fourth-floor">
+        <div class="imgBox"></div>
+        <div class="description">
+            <h2>소규모 모임에서 팬덤까지</h2>
+            <p>
+                어느 커뮤니티라도 운영할 수 있는 관리 도구가 주어지며,
+                멤버의 권한도 지정할 수 있어요. 멤버에게 특별한 권한을 주거나,
+                비공개 채널을 만들어보세요.
+            </p>
+        </div>
+    </div>
+    <div class="fifth-floor">
+        <div class="description">
+            <h2>친밀감을 위한 신뢰도 높은 기술</h2>
+            <p>
+                저지연 음성과 영상 채팅을 이용하면 꼭 한 공간에 있는 것 같답니다.
+                영상으로 인사하거나, 친구들의 게임 스트리밍을 보거나, 화면 공유로
+                함께 그림을 그릴 수도 있죠.
+            </p>
+        </div>
+        <div class="imgBox"></div>
+    </div>
+    <div class="sixth-floor">
+        <div class="imgBox"></div>
+        <h2>이제 시작해볼까요?</h2>
+        <button class="download"><i class="fa-solid fa-download"></i>&nbsp;&nbsp;Mac용 다운로드</button>
+    </div>
+    <div class="footer">
+        <div class="langSns">
+            <div class="language">
+                <select class="lang">
+                    <option value="ko" selected>🇰🇷 한국어</option>
+                    <option value="us">🇺🇸 영어</option>
+                    <option value="jp">🇯🇵 일본어</option>
+                    <option value="cn">🇨🇳 중국어</option>
+                    <option value="turkiye">🇹🇷 튀르키예어</option>
+                    <option value="denmark">🇩🇰 덴마크어</option>
+                    <option value="finland">🇫🇮 핀란드어</option>
+                    <option value="spain">🇪🇸 스페인어</option>
+                    <option value="india">🇮🇳 힌디어</option>
+                </select>
+            </div>
+            <div class="socialIcon">
+                <a href="#"><i class="fa-brands fa-twitter fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok fa-2xl" style="color: #ffffff;"></i></a>
+            </div>
+        </div>
+        <div class="dummy"></div>
+        <div class="product">
+            <ul>제품
+                <li><a href="#">다운로드</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">상태</a></li>
+            </ul>
+        </div>
+        <div class="company">
+            <ul>회사
+                <li><a href="#">소개</a></li>
+                <li><a href="#">채용</a></li>
+                <li><a href="#">브랜드</a></li>
+                <li><a href="#">뉴스</a></li>
+            </ul>
+        </div>
+        <div class="resource">
+            <ul>자원
+                <li><a href="#">대학</a></li>
+                <li><a href="#">지원</a></li>
+                <li><a href="#">보안</a></li>
+                <li><a href="#">블로그</a></li>
+                <li><a href="#">피드백</a></li>
+                <li><a href="#">Build</a></li>
+                <li><a href="#">StreamKit</a></li>
+                <li><a href="#">Creators</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Official 3rd Party Merch</a></li>
+            </ul>
+        </div>
+        <div class="policy">
+            <ul>정책
+                <li><a href="#">이용 약관</a></li>
+                <li><a href="#">개인 정보 보호 정책</a></li>
+                <li><a href="#">쿠키 설정</a></li>
+                <li><a href="#">지침</a></li>
+                <li><a href="#">감사</a></li>
+                <li><a href="#">라이선스</a></li>
+                <li><a href="#">관리</a></li>
+                <li><a href="#">회사정보</a></li>
+            </ul>
+        </div>
+        <div class="under">
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+            </div>
+            <div class="openDiscord">
+                <button class="Sign-up">가입하기</button>
+            </div>
+        </div>
+    </div>
     <!-- <div id="footer"></div>
 
     <script>
