--- a/blogpage/index.html
+++ b/blogpage/index.html
@@ -8,32 +8,53 @@
 </head>
 <body>
     <header class="discord-header">
-        <div>
-            <a href="#"><img src="../img/discord-logo-white.png" alt=""><h1>Discord</h1></a>
-            <a href="#" class="blog">Blog</a>
+        <div class="blog-navber">
+            <div class="logo">
+                <a href="../homepage/index.html"><img src="../img/discord-logo-white.png" alt=""><h1>Discord</h1></a>
+                <a href="#" class="blog">Blog</a>
+            </div>
+            <div class="menu">
+                <div class="z">
+                    <a href="#">
+                        <p>컬렉션 ▽</p>
+                    </a>
+                </div>
+                <div class="x">
+                    <a href="#">
+                        <p>추천</p>
+                    </a>
+                </div>
+                <div class="c">
+                    <a href="#">
+                        <p>DISCORD.COM</p>
+                    </a>
+                </div>
+                <div class="search">
+                    <input type="text" placeholder="search...">
+                    <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
+                </div>
+            </div>
         </div>
     </header>
     <div class="bluearea"></div>
     <section class="blog-section">
-        
         <div>
             <img src="../img/i1.png" alt="asd" class="a">
         </div>
-        <div>
-            <a href="#">제품 및 기능
-                <h1>
-                    MEME UP SOME FUN WITH REMIX
-                </h1>
+        <div class="nono">
+            <a href="#">
+                제품 및 기능
+                <div class="meme">MEME UP SOME FUN WITH REMIX</div>
             </a>     
         </div>   
     </section>
     <section class="section-view1">
         <a href="#" class="view1">
-            <img src="../img/i2.png" alt="img2" class="img2">
+            <img src="../img/i2.png" alt="img2" class="img1">
             <p>HOW TO DISCORD</p> <span>Amplify Your Discord Experience With These Awesome Al Apps</span>
         </a>
         <a href="#" class="view2">
-            <img src="../img/i3.png" alt="img3" class="img3">
+            <img src="../img/i3.png" alt="img3" class="img2">
             <p>정책 및 안전</p> <span>Stay Connected With Your Teen Using Discord's Family Center</span>
         </a>
     </section>
@@ -65,5 +86,307 @@
             <p>HOW TO DISCORD</p> <span>Fun Things to Do With Your Friends on Discord</span>
         </a>
     </section>
+    <!-- blog-hero-container -->
+    <div class="blog-hero-container">
+        <div class="box1">
+            <div class="blog-pillar-label">
+                COLLECTION
+            </div>
+            <div class="blog-pillar-title">
+                제품 및 기능
+            </div>
+            <div class="blog-pillar-iconimage">
+                <img src="../img/i10.svg" alt="img10" class="img1">
+            </div>
+            <div class="blog-pillar-desc">
+                Announcements, new features, and general info about the Discord app.
+            </div>
+            <a href="#">
+                <div class="blog-button">
+                    View Collection
+                </div>
+            </a>
+        </div>
+        <div class="box2">
+            <div class="box-box1">
+                <a href="">
+                    <img src="../img/i1.png" alt="img1" class="img2">
+                    <p>Meme Up Some Fun with Remix</p>
+                </a>
+            </div>
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i11.png" alt="img11" class="img1">
+                        <p>Discord Update: June 22, 2023 Changelog</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i5.png" alt="img5" class="img2">
+                        <p>Server Subscriptions Just Got Super Powered: Introducing Media Channels, Tier Templates and more!</p>
+                    </a>
+                </div>
+                <div class="mini-box3">
+                    <a href="#">
+                        <img src="../img/i12.png" alt="img12" class="img3">
+                        <p>Discord Update: May 22, 2023 Changelog</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog-hero-container1 -->
+    <div class="blog-hero-container1">
+        <div class="box1">
+            <div class="blog-pillar-label">
+                COLLECTION
+            </div>
+            <div class="blog-pillar-title">
+                커뮤니티
+            </div>
+            <div class="blog-pillar-iconimage">
+                <img src="../img/i13.svg" alt="img13" class="img1">
+            </div>
+            <div class="blog-pillar-desc">
+                Stories, spotlights, and behind the scenes from the heart and soul of Discord: the community.
+            </div>
+            <a href="#">
+                <div class="blog-button">
+                    View Collection
+                </div>
+            </a>
+        </div>
+        <div class="box2">
+            <div class="box-box1">
+                <a href="">
+                    <img src="../img/i4.png" alt="img14" class="img2">
+                    <p>Celebrating Disability Pride Month With Two Inclusive Communities</p>
+                </a>
+            </div>
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i8.png" alt="img8" class="img1">
+                        <p>Bridging Mental Health Gaps for Gen Z</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i15.png" alt="img15" class="img2">
+                        <p>Celebrate Discord’s 8th Birthday with Free Activities and More</p>
+                    </a>
+                </div>
+                <div class="mini-box3">
+                    <a href="#">
+                        <img src="../img/i16.png" alt="img16" class="img3">
+                        <p>Two Incredible AANHPI-led Discord Communities Uniting People Across the World</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog-hero-container2 -->
+    <div class="blog-hero-container2">
+        <div class="box1">
+            <div class="blog-pillar-label">
+                COLLECTION
+            </div>
+            <div class="blog-pillar-title">
+                HOW TO DISCORD
+            </div>
+            <div class="blog-pillar-iconimage">
+                <img src="../img/i17.svg" alt="img17" class="img1">
+            </div>
+            <div class="blog-pillar-desc">
+                Tutorials and guides to help with Discord and other topics of interest.
+            </div>
+            <a href="#">
+                <div class="blog-button">
+                    View Collection
+                </div>
+            </a>
+        </div>
+        <div class="box2">
+            <div class="box-box1">
+                <a href="">
+                    <img src="../img/i2.png" alt="img2" class="img2">
+                    <p>Amplify Your Discord Experience with These Awesome AI Apps</p>
+                </a>
+            </div>
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i9.png" alt="img9" class="img1">
+                        <p>Fun Things to Do With Your Friends on Discord</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i18.png" alt="img18" class="img2">
+                        <p>How to Create and Use Discord Emojis: A Beginner’s Guide to Creative Conversation</p>
+                    </a>
+                </div>
+                <div class="mini-box3">
+                    <a href="#">
+                        <img src="../img/i8.png" alt="img8" class="img3">
+                        <p>Fostering Friendships: A Beginner’s Guide to Discord Friends</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog-hero-container3 -->
+    <div class="blog-hero-container3">
+        <div class="box1">
+            <div class="blog-pillar-label">
+                COLLECTION
+            </div>
+            <div class="blog-pillar-title">
+                DISCORD HQ
+            </div>
+            <div class="blog-pillar-iconimage">
+                <img src="../img/i19.svg" alt="img19" class="img1">
+            </div>
+            <div class="blog-pillar-desc">
+                General company updates about what Discord is up to at HQ.
+            </div>
+            <a href="#">
+                <div class="blog-button">
+                    View Collection
+                </div>
+            </a>
+        </div>
+        <div class="box2">
+            <div class="box-box1">
+                <a href="">
+                    <img src="../img/i20.png" alt="img20" class="img2">
+                    <p>Pride at Discord — Our Values and Our Actions</p>
+                </a>
+            </div>
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i21.png" alt="img21" class="img1">
+                        <p>Discover the DISXCORE Collection on DiscordMerch.com</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i22.png" alt="img22" class="img2">
+                        <p>Join Wumpus and Friends in Our New “Wumpus Wonderventures” Comic</p>
+                    </a>
+                </div>
+                <div class="mini-box3">
+                    <a href="#">
+                        <img src="../img/i23.jpg" alt="img23" class="img3">
+                        <p>Celebrate May the 4th with a Fortnite Quest in Discord!</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog-hero-container4 -->
+    <div class="blog-hero-container4">
+        <div class="box1">
+            <div class="blog-pillar-label">
+                COLLECTION
+            </div>
+            <div class="blog-pillar-title">
+                정책 및 안전
+            </div>
+            <div class="blog-pillar-iconimage">
+                <img src="../img/i24.svg" alt="img24" class="img1">
+            </div>
+            <div class="blog-pillar-desc">
+                General tips and insights from Discord's Policy & Safety teams who enable users and communities to be safe on the platform.
+            </div>
+            <a href="#">
+                <div class="blog-button">
+                    View Collection
+                </div>
+            </a>
+        </div>
+        <div class="box2">
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i3.png" alt="img3" class="img1">
+                        <p>Stay Connected With Your Teen Using Discord’s Family Center</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i25.png" alt="img25" class="img2">
+                        <p>Privacy and Safety on Discord</p>
+                    </a>
+                </div>
+            </div>
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i26.png" alt="img26" class="img1">
+                        <p>미국 국방부 유출에 대한 저희의 대응</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i27.png" alt="img27" class="img2">
+                        <p>Discord Transparency Report: October - December 2022</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blog-hero-container5 -->
+    <div class="blog-hero-container5">
+        <div class="box1">
+            <div class="blog-pillar-label">
+                COLLECTION
+            </div>
+            <div class="blog-pillar-title">
+                ENGINEERING & DEVELOPERS
+            </div>
+            <div class="blog-pillar-iconimage">
+                <img src="../img/i28.svg" alt="img28" class="img1">
+            </div>
+            <div class="blog-pillar-desc">
+                Resources and news for engineers and Discord app developers.
+            </div>
+            <a href="#">
+                <div class="blog-button">
+                    View Collection
+                </div>
+            </a>
+        </div>
+        <div class="box2">
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i29.png" alt="img29" class="img1">
+                        <p>Developers, Supercharge Your Moderation with AutoMod</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i30.png" alt="img30" class="img2">
+                        <p>Join us at GDC 2023, both IRL and on Discord!</p>
+                    </a>
+                </div>
+            </div>
+            <div class="box-box2">
+                <div class="mini-box1">
+                    <a href="#">
+                        <img src="../img/i31.png" alt="img13" class="img1">
+                        <p>How Discord Stores Trillions of Messages</p>
+                    </a>
+                </div>
+                <div class="mini-box2">
+                    <a href="#">
+                        <img src="../img/i32.png" alt="img32" class="img2">
+                        <p>Attention Discord Developers: The App Directory is Here!</p>
+                    </a>
+                </div>
+            </div>
 </body>
 </html>
