--- a/homepage/index.html
+++ b/homepage/index.html
@@ -95,14 +95,14 @@
             <div class="language">
                 <select class="lang">
                     <option value="ko" selected>🇰🇷 한국어</option>
-                    <option value="us">🇺🇸 영어</option>
-                    <option value="jp">🇯🇵 일본어</option>
-                    <option value="cn">🇨🇳 중국어</option>
-                    <option value="turkiye">🇹🇷 튀르키예어</option>
-                    <option value="denmark">🇩🇰 덴마크어</option>
-                    <option value="finland">🇫🇮 핀란드어</option>
-                    <option value="spain">🇪🇸 스페인어</option>
-                    <option value="india">🇮🇳 힌디어</option>
+                    <option value="us">🇺🇸 English</option>
+                    <option value="jp">🇯🇵 日本語</option>
+                    <option value="cn">🇨🇳 中文</option>
+                    <option value="turkiye">🇹🇷 Türkçe</option>
+                    <option value="denmark">🇩🇰 Dansk</option>
+                    <option value="finland">🇫🇮 Suomi</option>
+                    <option value="spain">🇪🇸 Español</option>
+                    <option value="india">🇮🇳 हिन्दी </option>
                 </select>
             </div>
             <div class="socialIcon">
@@ -157,7 +157,7 @@
         </div>
         <div class="under">
             <div class="logo">
-                <img src="img/logo.png" alt="">
+                <img src="" alt="img/logo.png">
             </div>
             <div class="openDiscord">
                 <button class="Sign-up">가입하기</button>
