--- a/blogpage/index.html
+++ b/blogpage/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord 블로그</title>
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/13b874a53a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="discord-header">
@@ -388,5 +389,88 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- <div id="footer"></div>
+
+    <script>
+        const footer = document.getElementById("footer");
+
+        footer.innerHTML = '<object type="text/html" data="footer.html"></object>';
+    </script> -->
+    <div class="footer">
+        <div class="langSns">
+            <div class="language">
+                <select class="lang">
+                    <option value="ko" selected>🇰🇷 한국어</option>
+                    <option value="us">🇺🇸 English</option>
+                    <option value="jp">🇯🇵 日本語</option>
+                    <option value="cn">🇨🇳 中文</option>
+                    <option value="turkiye">🇹🇷 Türkçe</option>
+                    <option value="denmark">🇩🇰 Dansk</option>
+                    <option value="finland">🇫🇮 Suomi</option>
+                    <option value="spain">🇪🇸 Español</option>
+                    <option value="india">🇮🇳 हिन्दी </option>
+                </select>
+            </div>
+            <div class="socialIcon">
+                <a href="#"><i class="fa-brands fa-twitter fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube fa-2xl" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok fa-2xl" style="color: #ffffff;"></i></a>
+            </div>
+        </div>
+        <div class="dummy"></div>
+        <div class="product">
+            <ul>제품
+                <li><a href="#">다운로드</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">상태</a></li>
+            </ul>
+        </div>
+        <div class="company">
+            <ul>회사
+                <li><a href="#">소개</a></li>
+                <li><a href="#">채용</a></li>
+                <li><a href="#">브랜드</a></li>
+                <li><a href="#">뉴스</a></li>
+            </ul>
+        </div>
+        <div class="resource">
+            <ul>자원
+                <li><a href="#">대학</a></li>
+                <li><a href="#">지원</a></li>
+                <li><a href="#">보안</a></li>
+                <li><a href="#">블로그</a></li>
+                <li><a href="#">피드백</a></li>
+                <li><a href="#">Build</a></li>
+                <li><a href="#">StreamKit</a></li>
+                <li><a href="#">Creators</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Official 3rd Party Merch</a></li>
+            </ul>
+        </div>
+        <div class="policy">
+            <ul>정책
+                <li><a href="#">이용 약관</a></li>
+                <li><a href="#">개인 정보 보호 정책</a></li>
+                <li><a href="#">쿠키 설정</a></li>
+                <li><a href="#">지침</a></li>
+                <li><a href="#">감사</a></li>
+                <li><a href="#">라이선스</a></li>
+                <li><a href="#">관리</a></li>
+                <li><a href="#">회사정보</a></li>
+            </ul>
+        </div>
+        <div class="under">
+            <div class="logo">
+                <img src="" alt="img/logo.png">
+            </div>
+            <div class="openDiscord">
+                <button class="Sign-up">가입하기</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
