--- a/blogpage/index.html
+++ b/blogpage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,14 @@
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/13b874a53a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header class="discord-header">
         <div class="blog-navber">
             <div class="logo">
-                <a href="../homepage/index.html"><img src="../img/discord-logo-white.png" alt=""><h1>Discord</h1></a>
+                <a href="../homepage/index.html"><img src="../img/discord-logo-white.png" alt="">
+                    <h1>Discord</h1>
+                </a>
                 <a href="#" class="blog">Blog</a>
             </div>
             <div class="menu">
@@ -26,7 +30,7 @@
                     </a>
                 </div>
                 <div class="c">
-                    <a href="#">
+                    <a href="../homepage/index.html">
                         <p>DISCORD.COM</p>
                     </a>
                 </div>
@@ -46,8 +50,8 @@
             <a href="#">
                 제품 및 기능
                 <div class="meme">MEME UP SOME FUN WITH REMIX</div>
-            </a>     
-        </div>   
+            </a>
+        </div>
     </section>
     <section class="section-view1">
         <a href="#" class="view1">
@@ -66,7 +70,8 @@
         </a>
         <a href="#" class="view2">
             <img src="../img/i5.png" alt="img5" class="img2">
-            <p>제품 및 기능</p> <span>Server Subscriptions Just Got Super Powered: Introducing Media Channels, Tier Templates and morel</span>
+            <p>제품 및 기능</p> <span>Server Subscriptions Just Got Super Powered: Introducing Media Channels, Tier Templates
+                and morel</span>
         </a>
         <a href="#" class="view3">
             <img src="../img/i6.png" alt="img6" class="img3">
@@ -125,7 +130,8 @@
                 <div class="mini-box2">
                     <a href="#">
                         <img src="../img/i5.png" alt="img5" class="img2">
-                        <p>Server Subscriptions Just Got Super Powered: Introducing Media Channels, Tier Templates and more!</p>
+                        <p>Server Subscriptions Just Got Super Powered: Introducing Media Channels, Tier Templates and
+                            more!</p>
                     </a>
                 </div>
                 <div class="mini-box3">
@@ -300,7 +306,8 @@
                 <img src="../img/i24.svg" alt="img24" class="img1">
             </div>
             <div class="blog-pillar-desc">
-                General tips and insights from Discord's Policy & Safety teams who enable users and communities to be safe on the platform.
+                General tips and insights from Discord's Policy & Safety teams who enable users and communities to be
+                safe on the platform.
             </div>
             <a href="#">
                 <div class="blog-button">
@@ -465,7 +472,7 @@
         </div>
         <div class="under">
             <div class="logo">
-                <img src="" alt="img/logo.png">
+                <img src="../homepage/img/logo.png" alt="">
             </div>
             <div class="openDiscord">
                 <button class="Sign-up">가입하기</button>
@@ -473,4 +480,5 @@
         </div>
     </div>
 </body>
+
 </html>
