--- a/homepage/index.html
+++ b/homepage/index.html
@@ -25,7 +25,7 @@
                 <h2 class="intro-text"><a href="#">Discover</a></h2>
                 <h2 class="intro-text"><a href="#">Safety</a></h2>
                 <h2 class="intro-text"><a href="#">Support</a></h2>
-                <h2 class="intro-text"><a href="#">Blog</a></h2>
+                <h2 class="intro-text"><a href="../blogpage/index.html">Blog</a></h2>
                 <h2 class="intro-text"><a href="#">Careers</a></h2>
                 <div class="btnLogin"><button class="login">Login</button></div>
         </header>
