--- a/nitro/index.html
+++ b/nitro/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nitro 혜택 및 구독 | Discord</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/13b874a53a.js" crossorigin="anonymous"></script>
+    <link href="../homepage/img/discord-round-color-icon.png" rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
