--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,7 +20,7 @@
                         <img src="img/logo.png" alt="로고이미지">
                     </a>
                 </h1>
-                <h2 class="intro-text"><a href="#">Download</a></h2>
+                <h2 class="intro-text"><a href="../downloadpage/index.html">Download</a></h2>
                 <h2 class="intro-text"><a href="#">Nitro</a></h2>
                 <h2 class="intro-text"><a href="#">Discover</a></h2>
                 <h2 class="intro-text"><a href="#">Safety</a></h2>
